# rfdetr-tooling

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: predict.md  train.md
docs/plans/: coco-e2e-validation.md  custom-resolution-training.md  image-size-option.md  predict-refactor.md  rect-resolution-experiment.md  true-resize-severstal.md
experiments/rect_coco/: _check_3b.py
rfdetr_tooling/: __init__.py  __main__.py  _inference.py  cli.py  config.py  ddp.py  predict.py  test_runner.py  train.py  val.py
